--- a/MobilePart/app/src/main/res/layout/activity_user_profile.xml
+++ b/MobilePart/app/src/main/res/layout/activity_user_profile.xml
@@ -27,17 +27,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name    :"
+                android:text="Name       :"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textusername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="username"
                 android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -52,17 +53,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email     :"
+                android:text="Email        :"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/usertextemail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="user@gmail.com"
                 android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -77,20 +79,25 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pincode :"
+                android:text="Password :"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/usertextpw"
                 android:layout_height="wrap_content"
                 android:text="****"
                 android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
+
+
         </LinearLayout>
+
+
 
     </LinearLayout>
 
