--- a/MobilePart/app/src/main/res/layout/activity_authntication.xml
+++ b/MobilePart/app/src/main/res/layout/activity_authntication.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="220dp"
-        android:text="Select Your Authentication method"
+        android:text="Select Your Authentication method" //select
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textAlignment="center"
