--- a/MobilePart/app/src/main/res/layout/activity_history.xml
+++ b/MobilePart/app/src/main/res/layout/activity_history.xml
@@ -13,12 +13,12 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:text="View History"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="32sp"
-        android:textStyle="black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
         android:id="@+id/historylist"
         android:layout_width="353dp"
         android:layout_height="565dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
